--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -4,45 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View" />
 
-        <variable
-            name="viewModel"
-            type="com.elmorshdi.trainingtask.view.ui.login.LoginViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.ui.login.LoginFragment"
-        app:showToast= "@{viewModel.stateCodeMessage}">
+        tools:context=".view.ui.login.LoginFragment">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/loginImageView"
             android:layout_width="@dimen/_100sdp"
-            android:src="@mipmap/ic_launcher_round_new"
             android:layout_height="@dimen/_100sdp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/login_emailTextField"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="@dimen/_30sdp"
             android:animateLayoutChanges="true"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:src="@mipmap/ic_launcher_round_new"
+            app:layout_constraintBottom_toTopOf="@id/login_emailTextField"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/login_emailTextField"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
-            app:boxStrokeColor="@color/blue"
-            app:hintAnimationEnabled="true"
-            app:hintTextColor="@color/blue"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_5sdp"
             android:hint="@string/email_or_phone_number"
+            app:boxStrokeColor="@color/blue"
+            app:hintAnimationEnabled="true"
+            app:hintTextColor="@color/blue"
             app:layout_constraintBottom_toTopOf="@id/login_passwordTextField"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +47,9 @@
                 android:id="@+id/login_emailEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:cursorVisible="true"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:cursorVisible="true"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_18ssp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -68,13 +63,12 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_5sdp"
+            app:boxStrokeColor="@color/blue"
             app:layout_constraintBottom_toTopOf="@id/login_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:passwordToggleEnabled="true"
             app:layout_constraintStart_toStartOf="parent"
-
-            app:boxStrokeColor="@color/blue"
-            app:layout_constraintTop_toBottomOf="@id/login_emailTextField">
+            app:layout_constraintTop_toBottomOf="@id/login_emailTextField"
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_passwordEditText"
@@ -84,6 +78,7 @@
                 android:inputType="textPassword"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_18ssp" />
+
             <TextView
                 android:id="@+id/errorTextView"
                 android:layout_width="wrap_content"
@@ -93,8 +88,8 @@
                 android:gravity="start"
                 android:padding="8dp"
                 android:textColor="@color/red"
-                android:textSize="@dimen/_12ssp"/>
-<!--tools:text="Password minimum length 8 \n1 uppercase\n1 number\n1 special character"-->
+                android:textSize="@dimen/_12ssp"
+                android:visibility="gone" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,25 +98,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
             android:background="@color/blue"
             android:text="@string/log_in"
             android:textColor="@color/white"
             android:textSize="@dimen/_16ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-
             app:layout_constraintTop_toBottomOf="@+id/login_passwordTextField" />
+
         <com.github.ybq.android.spinkit.SpinKitView
             android:id="@+id/login_spin_kit"
             style="@style/SpinKitView.CubeGrid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="@{viewModel.isLoading()?View.VISIBLE:View.GONE}"
             android:translationZ="@dimen/_20sdp"
-
+            android:visibility="gone"
             app:SpinKit_Color="@color/yellow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
